[gd_scene load_steps=8 format=4 uid="uid://dypvtpctvas43"]

[ext_resource type="TileSet" uid="uid://bu4gn6thqnrqb" path="res://scenes/test_tileset.tres" id="1_6ijtv"]
[ext_resource type="Script" uid="uid://c5436ldwguqbw" path="res://scripts/reactor_sector/reactor_sector.gd" id="1_pkqih"]
[ext_resource type="PackedScene" uid="uid://b6mrdx2sklm1e" path="res://scenes/reactor_sector/reactor_dash_platform.tscn" id="3_u3ho6"]
[ext_resource type="PackedScene" uid="uid://5p3nb0s7xyta" path="res://scenes/wall_terminal.tscn" id="4_cwp08"]
[ext_resource type="Script" uid="uid://cyqgaofnmbcig" path="res://scripts/reactor_sector/reactor_terminal_function_call.gd" id="4_tipgw"]
[ext_resource type="PackedScene" uid="uid://c3cqhbb84sclu" path="res://scenes/reactor_sector/reactor_dash_recharge.tscn" id="5_tipgw"]
[ext_resource type="PackedScene" uid="uid://b3lbpif526eab" path="res://scenes/reactor_sector/reactor_door.tscn" id="7_3f7aj"]

[node name="ReactorSector" type="Node2D"]
script = ExtResource("1_pkqih")

[node name="Tilemaps" type="Node2D" parent="."]

[node name="MainPlatforms" type="TileMapLayer" parent="Tilemaps"]
tile_map_data = PackedByteArray("AAAAAAEAAQAEAAIAAAAAAAIAAQAEAAIAAAAAAAMAAQAEAAIAAAAAAAQAAQAEAAIAAAAAAAUAAQAEAAIAAAAAAAYAAQAEAAIAAAAAAAcAAQAEAAIAAAAAAAgAAQAEAAIAAAAAAAkAAQAEAAIAAAAAAAoAAQAEAAIAAAAAAA8AAQAEAAIAAAABAA8AAQAEAAIAAAACAA8AAQAEAAIAAAADAA8AAQAEAAIAAAAEAA8AAQAEAAIAAAAFAA8AAQAEAAIAAAAGAA8AAQAEAAIAAAAHAA8AAQAEAAIAAAAIAA8AAQAEAAIAAAAJAA8AAQAEAAIAAAAKAA8AAQAEAAIAAAALAA8AAQAEAAIAAAAMAA8AAQAEAAIAAAANAA8AAQAEAAIAAAAOAA8AAQAEAAIAAAAPAA8AAQAEAAIAAAAQAA8AAQAEAAIAAAARAA8AAQAEAAIAAAASAA8AAQAEAAIAAAATAA8AAQAEAAIAAAAUAA8AAQAEAAIAAAAVAA8AAQAEAAIAAAAWAA8AAQAEAAIAAAAXAA8AAQAEAAIAAAAYAA8AAQAEAAIAAAAZAA8AAQAEAAIAAAAaAA8AAQAEAAIAAAAbAA8AAQAEAAIAAAAcAAMAAQAEAAIAAAAcAAQAAQAEAAIAAAAcAAUAAQAEAAIAAAAcAAYAAQAEAAIAAAAcAAcAAQAEAAIAAAAcAAgAAQAEAAIAAAAcAAkAAQAEAAIAAAAcAAoAAQAEAAIAAAAcAA8AAQAEAAIAAAAAABAAAQAEAAIAAAABABAAAQAEAAIAAAACABAAAQAEAAIAAAADABAAAQAEAAIAAAAEABAAAQAEAAIAAAAFABAAAQAEAAIAAAAGABAAAQAEAAIAAAAHABAAAQAEAAIAAAAIABAAAQAEAAIAAAAJABAAAQAEAAIAAAAKABAAAQAEAAIAAAALABAAAQAEAAIAAAAMABAAAQAEAAIAAAANABAAAQAEAAIAAAAOABAAAQAEAAIAAAAPABAAAQAEAAIAAAAQABAAAQAEAAIAAAARABAAAQAEAAIAAAASABAAAQAEAAIAAAATABAAAQAEAAIAAAAUABAAAQAEAAIAAAAVABAAAQAEAAIAAAAWABAAAQAEAAIAAAAXABAAAQAEAAIAAAAYABAAAQAEAAIAAAAZABAAAQAEAAIAAAAaABAAAQAEAAIAAAAbABAAAQAEAAIAAAAcAAsAAQAEAAIAAAAcABAAAQAEAAIAAAAAAAAAAQAEAAIAAAAcAAAAAQAEAAIAAAABAAAAAQAEAAIAAAACAAAAAQAEAAIAAAADAAAAAQAEAAIAAAAEAAAAAQAEAAIAAAAFAAAAAQAEAAIAAAAGAAAAAQAEAAIAAAAHAAAAAQAEAAIAAAAIAAAAAQAEAAIAAAAJAAAAAQAEAAIAAAAKAAAAAQAEAAIAAAALAAAAAQAEAAIAAAAMAAAAAQAEAAIAAAANAAAAAQAEAAIAAAAOAAAAAQAEAAIAAAAPAAAAAQAEAAIAAAAQAAAAAQAEAAIAAAARAAAAAQAEAAIAAAASAAAAAQAEAAIAAAATAAAAAQAEAAIAAAAUAAAAAQAEAAIAAAAVAAAAAQAEAAIAAAAWAAAAAQAEAAIAAAAXAAAAAQAEAAIAAAAYAAAAAQAEAAIAAAAZAAAAAQAEAAIAAAAaAAAAAQAEAAIAAAAbAAAAAQAEAAIAAAAcAAIAAQAEAAIAAAAcAAEAAQAEAAIAAADj/wAAAQAEAAIAAADj/wEAAQAEAAIAAADj/wIAAQAEAAIAAADj/wMAAQAEAAIAAADj/wQAAQAEAAIAAADj/wUAAQAEAAIAAADj/woAAQAEAAIAAADj/wsAAQAEAAIAAADj/w8AAQAEAAIAAADj/xAAAQAEAAIAAADk/wAAAQAEAAIAAADl/wAAAQAEAAIAAADm/wAAAQAEAAIAAADn/wAAAQAEAAIAAADo/wAAAQAEAAIAAADp/wAAAQAEAAIAAADq/wAAAQAEAAIAAADr/wAAAQAEAAIAAADs/wAAAQAEAAIAAADt/wAAAQAEAAIAAADu/wAAAQAEAAIAAADv/wAAAQAEAAIAAADw/wAAAQAEAAIAAADx/wAAAQAEAAIAAADy/wAAAQAEAAIAAADz/wAAAQAEAAIAAAD0/wAAAQAEAAIAAAD1/wAAAQAEAAIAAAD2/wAAAQAEAAIAAAD3/wAAAQAEAAIAAAD4/wAAAQAEAAIAAAD5/wAAAQAEAAIAAAD6/wAAAQAEAAIAAAD7/xAAAQAEAAIAAAD8/xAAAQAEAAIAAAD9/xAAAQAEAAIAAAD+/xAAAQAEAAIAAAD//wAAAQAEAAIAAAD//wEAAQAEAAIAAAD//wIAAQAEAAIAAAD//wMAAQAEAAIAAAD//wQAAQAEAAIAAAD//wUAAQAEAAIAAAD//wkAAQAEAAIAAAD//woAAQAEAAIAAAD//w8AAQAEAAIAAAD//xAAAQAEAAIAAAD7/w8AAQAEAAIAAAD8/w8AAQAEAAIAAAD9/w8AAQAEAAIAAAD+/w8AAQAEAAIAAADj/wwAAQAEAAIAAADj/w0AAQAEAAIAAADj/w4AAQAEAAIAAAD//wYAAQAEAAIAAAD//wcAAQAEAAIAAAD//wgAAQAEAAIAAADj/wkAAQAEAAIAAAAcAAwAAQAEAAIAAAAcAA0AAQAEAAIAAAAcAA4AAQAEAAIAAADj/wYAAQAEAAIAAADj/wcAAQAEAAIAAADj/wgAAQAEAAIAAAD+/wcAAQAEAAIAAAD9/wcAAQAEAAIAAAD7/wgAAQAEAAIAAAD8/wgAAQAEAAIAAAD9/wgAAQAEAAIAAAD+/wgAAQAEAAIAAAD//+//AQAEAAIAAAD///D/AQAEAAIAAAD///H/AQAEAAIAAAD///L/AQAEAAIAAAD///P/AQAEAAIAAAD///T/AQAEAAIAAAD///X/AQAEAAIAAAD///b/AQAEAAIAAAD///f/AQAEAAIAAAD///j/AQAEAAIAAAD///n/AQAEAAIAAAD///r/AQAEAAIAAAD///v/AQAEAAIAAAD///z/AQAEAAIAAAD///3/AQAEAAIAAAD///7/AQAEAAIAAAD/////AQAEAAIAAADj/+//AQAEAAIAAADk/+//AQAEAAIAAADl/+//AQAEAAIAAADm/+//AQAEAAIAAADn/+//AQAEAAIAAADo/+//AQAEAAIAAADp/+//AQAEAAIAAADq/+//AQAEAAIAAADr/+//AQAEAAIAAADs/+//AQAEAAIAAADt/+//AQAEAAIAAADu/+//AQAEAAIAAADv/+//AQAEAAIAAADw/+//AQAEAAIAAADx/+//AQAEAAIAAADy/+//AQAEAAIAAADz/+//AQAEAAIAAAD0/+//AQAEAAIAAAD1/+//AQAEAAIAAAD2/+//AQAEAAIAAAD3/+//AQAEAAIAAAD4/+//AQAEAAIAAAD5/+//AQAEAAIAAAD6/+//AQAEAAIAAAD7/+//AQAEAAIAAAD8/+//AQAEAAIAAAD9/+//AQAEAAIAAAD+/+//AQAEAAIAAADj//X/AQAEAAIAAADj//b/AQAEAAIAAADj//f/AQAEAAIAAADj//j/AQAEAAIAAADj//n/AQAEAAIAAADj//r/AQAEAAIAAADj//v/AQAEAAIAAADj//z/AQAEAAIAAADj//3/AQAEAAIAAADj//7/AQAEAAIAAADj////AQAEAAIAAADk//X/AQAEAAIAAADl//X/AQAEAAIAAADm//X/AQAEAAIAAAD6////AQAEAAIAAAD7////AQAAAAYAAAD8////AQAAAAYAAAD9////AQAAAAYAAAD+////AQAAAAYAAADi////AQAEAAIAAADi//7/AQAEAAIAAADi//n/AQAEAAIAAADi//j/AQAEAAIAAADi//f/AQAEAAIAAADi//b/AQAEAAIAAADi//X/AQAEAAIAAADh//X/AQAEAAIAAADi/+//AQAEAAIAAADh/+//AQAEAAIAAADg/+//AQAEAAIAAADf/+//AQAEAAIAAADe/+//AQAEAAIAAADd/+//AQAEAAIAAADc/+//AQAEAAIAAADb/+//AQAEAAIAAADa/+//AQAEAAIAAADi/wAAAQAEAAIAAADh/wAAAQAEAAIAAADg/wAAAQAEAAIAAADf/wAAAQAEAAIAAADe/wAAAQAEAAIAAADd/wAAAQAEAAIAAADc/wAAAQAEAAIAAADb/wAAAQAEAAIAAADa/wAAAQAEAAIAAADi//3/AQAEAAIAAADG/+//AQAEAAIAAADG//X/AQAEAAIAAADG/wAAAQAEAAIAAADH/+//AQAEAAIAAADH/wAAAQAEAAIAAADI/+//AQAEAAIAAADI/wAAAQAEAAIAAADJ/+//AQAEAAIAAADJ/wAAAQAEAAIAAADK/+//AQAEAAIAAADK/wAAAQAEAAIAAADL/+//AQAEAAIAAADL/wAAAQAEAAIAAADM/+//AQAEAAIAAADM/wAAAQAEAAIAAADN/+//AQAEAAIAAADN/wAAAQAEAAIAAADO/+//AQAEAAIAAADO/wAAAQAEAAIAAADP/+//AQAEAAIAAADP//f/AQAEAAIAAADP//j/AQAEAAIAAADP//n/AQAEAAIAAADP//r/AQAEAAIAAADP//v/AQAEAAIAAADP//z/AQAEAAIAAADP//3/AQAEAAIAAADP//7/AQAEAAIAAADP////AQAEAAIAAADP/wAAAQAEAAIAAADQ/+//AQAEAAIAAADQ/wAAAQAEAAIAAADR/+//AQAEAAIAAADR/wAAAQAEAAIAAADS/+//AQAEAAIAAADS/wAAAQAEAAIAAADT/+//AQAEAAIAAADT/wAAAQAEAAIAAADU/+//AQAEAAIAAADU/wAAAQAEAAIAAADV/+//AQAEAAIAAADV/wAAAQAEAAIAAADW/+//AQAEAAIAAADW/wAAAQAEAAIAAADX/+//AQAEAAIAAADX/wAAAQAEAAIAAADY/+//AQAEAAIAAADY//D/AQAEAAIAAADY//T/AQAEAAIAAADY//X/AQAEAAIAAADY//b/AQAEAAIAAADY/wAAAQAEAAIAAADG//b/AQAEAAIAAADG//f/AQAEAAIAAADG//j/AQAEAAIAAADG//n/AQAEAAIAAADG//r/AQAEAAIAAADG//v/AQAEAAIAAADG//z/AQAEAAIAAADG//3/AQAEAAIAAADG//7/AQAEAAIAAADG////AQAEAAIAAADH//X/AQAEAAIAAADQ//f/AQAEAAIAAADQ//j/AQAEAAIAAADQ//n/AQAEAAIAAADQ//r/AQAEAAIAAADQ//v/AQAEAAIAAADQ//z/AQAEAAIAAADQ//3/AQAEAAIAAADQ//7/AQAEAAIAAADQ////AQAEAAIAAADZ/+//AQAEAAIAAADZ//D/AQAEAAIAAADZ//H/AQAEAAIAAADZ//L/AQAEAAIAAADZ//P/AQAEAAIAAADZ//T/AQAEAAIAAADZ//X/AQAEAAIAAADZ//b/AQAEAAIAAADZ/wAAAQAEAAIAAADH//f/AQAEAAIAAADI//f/AQAEAAIAAADJ//f/AQAEAAIAAADK//f/AQAEAAIAAADL//f/AQAEAAIAAADM//f/AQAEAAIAAADN//f/AQAEAAIAAADO//f/AQAEAAIAAADh//b/AQAEAAIAAADh//f/AQAEAAIAAADh//j/AQAEAAIAAADh//n/AQAEAAIAAADh//3/AQAEAAIAAADh//7/AQAEAAIAAADh////AQAEAAIAAADi//r/AQAEAAIAAADi//v/AQAEAAIAAADi//z/AQAEAAIAAAD1////AQAEAAIAAAD2////AQAEAAIAAAD3////AQAEAAIAAAD4////AQAEAAIAAAD5////AQAEAAIAAADk//f/AQAEAAIAAADl//b/AQAEAAIAAADi//D/AQAEAAIAAADj//D/AQAEAAIAAADG//D/AQAEAAIAAAA=")
tile_set = ExtResource("1_6ijtv")

[node name="DeathTiles" type="TileMapLayer" parent="Tilemaps"]
modulate = Color(0, 0, 0, 1)
tile_map_data = PackedByteArray("AADk////AQAOAAEAAADl////AQAOAAEAAADm////AQAOAAEAAADn////AQAOAAEAAADo////AQAOAAEAAADp////AQAOAAEAAADq////AQAOAAEAAADr////AQAOAAEAAADs////AQAOAAEAAADt////AQAOAAEAAADu////AQAOAAEAAADv////AQAOAAEAAADw////AQAOAAEAAADx////AQAOAAEAAADy////AQAOAAEAAADz////AQAOAAEAAAD0////AQAOAAEAAADg////AQAOAAEAAADf////AQAOAAEAAADe////AQAOAAEAAADd////AQAOAAEAAADc////AQAOAAEAAADb////AQAOAAEAAADa////AQAOAAEAAADH////AQAOAAEAAADI////AQAOAAEAAADJ////AQAOAAEAAADK////AQAOAAEAAADL////AQAOAAEAAADM////AQAOAAEAAADN////AQAOAAEAAADP//b/AQAOAAEAAADR////AQAOAAEAAADS////AQAOAAEAAADT////AQAOAAEAAADU////AQAOAAEAAADV////AQAOAAEAAADW////AQAOAAEAAADX////AQAOAAEAAADY////AQAOAAEAAADO////AQAOAAEAAADQ//b/AQAOAAEAAADZ////AQAOAAEAAADH//b/AQAOAAEAAADI//b/AQAOAAEAAADJ//b/AQAOAAEAAADK//b/AQAOAAEAAADL//b/AQAOAAEAAADM//b/AQAOAAEAAADN//b/AQAOAAEAAADO//b/AQAOAAEAAADk/xAAAQAOAAEAAADl/xAAAQAOAAEAAADm/xAAAQAOAAEAAADn/xAAAQAOAAEAAADo/xAAAQAOAAEAAADp/xAAAQAOAAEAAADq/xAAAQAOAAEAAADr/xAAAQAOAAEAAADs/xAAAQAOAAEAAADt/xAAAQAOAAEAAADu/xAAAQAOAAEAAADv/xAAAQAOAAEAAADw/xAAAQAOAAEAAADx/xAAAQAOAAEAAADy/xAAAQAOAAEAAADz/xAAAQAOAAEAAAD0/xAAAQAOAAEAAAD1/xAAAQAOAAEAAAD2/xAAAQAOAAEAAAD3/xAAAQAOAAEAAAD4/xAAAQAOAAEAAAD5/xAAAQAOAAEAAAD6/xAAAQAOAAEAAAD8/wcAAQAOAAEAAAD7/wcAAQAOAAEAAAA=")
tile_set = ExtResource("1_6ijtv")

[node name="DashPlatforms" type="Node2D" parent="."]

[node name="Tutorial1" type="Node2D" parent="DashPlatforms"]

[node name="DashPlatform1" parent="DashPlatforms/Tutorial1" instance=ExtResource("3_u3ho6")]
position = Vector2(-490, 310)
platform_data = {
"size": Vector2i(2, 1),
"velocity_direction": Vector2i(1, 0),
"velocity_magnitude": Vector2i(12, 0)
}

[node name="DashPlatform2" parent="DashPlatforms/Tutorial1" instance=ExtResource("3_u3ho6")]
position = Vector2(-490, 150)
platform_data = {
"size": Vector2i(2, 1),
"velocity_direction": Vector2i(1, 0),
"velocity_magnitude": Vector2i(6, 0)
}

[node name="Puzzle1" type="Node2D" parent="DashPlatforms"]
position = Vector2(-580, 0)

[node name="DashPlatform1" parent="DashPlatforms/Puzzle1" instance=ExtResource("3_u3ho6")]
position = Vector2(-30, -110)
platform_data = {
"size": Vector2i(1, 3),
"velocity_direction": Vector2i(-1, 0),
"velocity_magnitude": Vector2i(5, 0)
}

[node name="DashPlatform2" parent="DashPlatforms/Puzzle1" instance=ExtResource("3_u3ho6")]
position = Vector2(-210, -290)
platform_data = {
"size": Vector2i(1, 3),
"velocity_direction": Vector2i(-1, 0),
"velocity_magnitude": Vector2i(5, 0)
}

[node name="Puzzle2" type="Node2D" parent="DashPlatforms"]

[node name="Boss" type="Node2D" parent="DashPlatforms"]

[node name="ReturnTimer" type="Timer" parent="."]
one_shot = true

[node name="Terminals" type="Node2D" parent="."]
script = ExtResource("4_tipgw")

[node name="Main" type="Node2D" parent="Terminals"]

[node name="WallTerminal" parent="Terminals/Main" instance=ExtResource("4_cwp08")]
position = Vector2(140, 285)

[node name="Tutorial2" type="Node2D" parent="Terminals"]

[node name="WallTerminal" parent="Terminals/Tutorial2" instance=ExtResource("4_cwp08")]
position = Vector2(-535, -235)

[node name="Puzzle1" type="Node2D" parent="Terminals"]

[node name="WallTerminal" parent="Terminals/Puzzle1" instance=ExtResource("4_cwp08")]
position = Vector2(-1715, -235)

[node name="DashRecharges" type="Node2D" parent="."]

[node name="Tutorial2" type="Node2D" parent="DashRecharges"]

[node name="DashRecharge1" parent="DashRecharges/Tutorial2" instance=ExtResource("5_tipgw")]
position = Vector2(-170, -110)

[node name="DashRecharge2" parent="DashRecharges/Tutorial2" instance=ExtResource("5_tipgw")]
position = Vector2(-270, -170)

[node name="DashRecharge3" parent="DashRecharges/Tutorial2" instance=ExtResource("5_tipgw")]
position = Vector2(-370, -230)

[node name="Puzzle1" type="Node2D" parent="DashRecharges"]
position = Vector2(-1160, 0)

[node name="DashRecharge1" parent="DashRecharges/Puzzle1" instance=ExtResource("5_tipgw")]
position = Vector2(250, -110)

[node name="DashRecharge2" parent="DashRecharges/Puzzle1" instance=ExtResource("5_tipgw")]
position = Vector2(330, -210)

[node name="Doors" type="Node2D" parent="."]

[node name="Main" parent="Doors" instance=ExtResource("7_3f7aj")]
position = Vector2(0, 230)

[node name="Tutorial2" parent="Doors" instance=ExtResource("7_3f7aj")]
position = Vector2(-580, -290)

[connection signal="timeout" from="ReturnTimer" to="." method="_on_return_timer_timeout"]
[connection signal="terminal_interacted" from="Terminals/Main/WallTerminal" to="Terminals" method="reactivate_cooling"]
[connection signal="terminal_interacted" from="Terminals/Tutorial2/WallTerminal" to="Terminals" method="reactivate_cooling"]
[connection signal="terminal_interacted" from="Terminals/Puzzle1/WallTerminal" to="Terminals" method="reactivate_cooling"]
